feat: criado esqueleto das postagens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
+.titulo {
+  @apply text-important text-4xl tracking-wide font-bold md:text-5xl lg:text-6xl;
+}
 @tailwind components;
 @tailwind utilities;
