feat: adicionado nova imagem de logo, criado classes. Fix: Responsividade do container

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,19 @@
 @tailwind base;
+.mp {
+  @apply ml-10;
+}
+.cardContainer {
+  @apply container mx-auto text-muted text-wrap lg:py-3 text-justify  leading-relaxed;
+}
 .titulo {
-  @apply text-important text-4xl tracking-wide font-bold md:text-5xl lg:text-6xl;
+  @apply text-important pb-3 text-4xl tracking-wide font-bold md:text-5xl lg:text-6xl;
+}
+.tituloCard {
+  @apply text-2xl py-3;
+}
+
+.btHover {
+  @apply hover:bg-hover hover:rounded;
 }
 @tailwind components;
 @tailwind utilities;
