fix: erro className feat: estrutura da sidenav

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   @apply text-important pb-3 text-3xl tracking-wide font-bold md:text-5xl lg:text-6xl;
 }
 .tituloCard {
-  @apply text-2xl py-3;
+  @apply text-2xl py-3 text-important;
 }
 
 .btHover {
