feat novas imagens, padrão de desing e novo componente de referencia storyset. Fix: design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 .cardContainer {
   @apply container mx-auto text-muted text-wrap lg:py-3 text-justify  leading-relaxed;
 }
+.resumeCard {
+  @apply bg-card px-4 py-2 rounded-md;
+}
 .titulo {
   @apply text-important pb-3 text-3xl tracking-wide font-bold md:text-5xl lg:text-6xl;
 }
