--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
   @apply text-important pb-3 text-3xl tracking-wide font-bold md:text-5xl lg:text-6xl;
 }
 .tituloCard {
-  @apply text-2xl py-3 text-important;
+  @apply text-2xl py-3 text-important font-light;
 }
 
 .btHover {
